# nova-py

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml  logging.yaml
deploy/: fetch-secret.sh  update.sh
openclaw/: channel.yaml
scripts/: run_dev.ps1  run_dev.sh
src/nova/: __init__.py  __main__.py  bot.py  config.py  logging.py  openclaw.py
src/nova/cogs/: __init__.py  admin.py  events.py  general.py  music.py  pins.py  webhooks.py
src/nova/utils/: __init__.py  checks.py  embeds.py  music_queue.py
tests/: conftest.py  test_config.py  test_openclaw.py
